<resources>
    <string name="app_name">FinalTutorialApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--Enter Your Name Field-->
    <string name="enter_your_name">Enter Your Name</string>

    <!--Question 1-->
    <string name="num_question_1">Question 1</string>
    <string name="question_1">What operator do you use to call an objects constructor method and create a new object?</string>

    <!--Answers to the question 1-->
    <string name="plus">+</string>
    <string name="news">new</string>
    <string name="ins">instanceOf</string>
    <string name="minus">-</string>


    <!--Question 2-->
    <string name="num_question_2">Question 2</string>
    <string name="question_2">What kinds of methods apply to all objects of a class rather than an individual object?</string>

    <!--Answers to the question 2-->
    <string name="answer1">Universal methods</string>
    <string name="answer2">Instance methods</string>
    <string name="answer3">Class methods</string>

    <!--Question 3-->
    <string name="num_question_3">Question 3</string>
    <string name="question_3">What is true about a final class?</string>

    <!--Answers to the question 3-->
    <string name="publ">class declard final is a final class.</string>
    <string name="sensitive">Final classes are created so the methods implemented by that class cannot be overridden.</string>
    <string name="confidential">It cant be inherited.</string>
    <string name="_private">All of the above.</string>

    <!--Question 4-->
    <string name="question_4"> What is function overloading?</string>
    <string name="num_question_4">Question 4</string>

    <!--Answers to the question 4-->
    <string name="managerial">Methods with same name but different parameters.</string>
    <string name="physical">Methods with same name but different return types.</string>
    <string name="logical"> Methods with same name, same parameter types but different parameter names.</string>
    <string name="administrative"> None of the above.</string>

    <!--Question 5-->
    <string name="num_question_5">Question 5</string>
    <string name="question_5">Which of the following is true about protected access modifier?</string>

    <!--Answers to the question 5-->
    <string name="answer_5_1"> Variables, methods and constructors which are declared protected can be accessed by any class.</string>
    <string name="answer_5_2">Variables, methods and constructors which are declared protected can be accessed by any class lying in same package.</string>
    <string name="answer_5_3">Variables, methods and constructors which are declared protected in the superclass can be accessed only by its child class.
</string>
    <string name="answer_5_4">None of the above.</string>

    <!--Question 6-->
    <string name="num_question_6">Question 6</string>
    <string name="question_6">What is Deserialization?</string>

    <!--Answers to the question 6-->
    <string name="passive_attack">Deserialization is the process of restoring state of an object from a byte stream.</string>
    <string name="active_attack">Serialization is the process of restoring state of an object from an object.</string>
    <string name="close_in_attack">Both of the above.</string>
    <string name="insider_attack">None of the above.</string>

    <!--Question 7-->
    <string name="num_question_7">Question 7</string>
    <string name="Question_7"> - Under what conditions is an objects finalize() method invoked by the garbage collector?</string>

    <!--Answers to the question 7-->
    <string name="physical_security"> When it detects that the object has become unreachable.</string>
    <string name="administrative_security">As soon as object is set as null.</string>
    <string name="logical_security">At fixed intervalm it checks for null value.</string>
    <string name="vulnerability"> None of the above.</string>

    <!--Question 8-->
    <string name="num_question_8">Question 8</string>
    <string name="question_8">Which of the following is a thread safe?</string>

    <!--Answers to the question 8-->
    <string name="packet_capture">StringBuilder</string>
    <string name="password_attack">StringBuffer</string>
    <string name="dumpster_driving">Both of the above</string>
    <string name="botnet">none of the above</string>


    <!--Question 9-->
    <string name="num_question_9">Question 9</string>
    <string name="question_9">What is a class in java?</string>

    <!--Answers to the question 9-->
    <string name="datadiddling"> A class is a blue print from which individual objects are created. A class can contain fields and methods to describe the behavior of an object.</string>
    <string name="datavdiddling">class is a special data type.</string>
    <string name="datdiddlinlg">class is used to allocate memory to a data type.</string>
    <string name="datdiddlling">none of the above.</string>
    <!--Rest of the answers to question 9 to watch in the answer to question 8 above-->

    <!--Question 10-->
    <string name="num_question_10">Question 10</string>
    <string name="question_10">What is the size of char variable?</string>

    <!--Answers to the question 9-->
    <string name="denial_of_servie">8 bit</string>
    <string name="denial_of_sece">16 bit</string>
    <string name="denial_of_srvie">32 bit</string>
    <string name="denial_of_srvic">64 bit</string>
    <!--Rest of the answers to question 10 to watch in the answer to question 8 above-->

    <!--Button "End Test"-->
    <string name="end_test">End test</string>

    <!--Test Result-->
    <string name="test_result_name">"Name: "</string>
    <string name="test_result">Test Result</string>
    <string name="test_result_score">"Score: "</string>


    <!--    html quiz-->


    <!--Question 1-->
    <string name="hnum_question_1">Question 1</string>
    <string name="question_1h">Is it possible to link within the current page ?</string>

    <!--Answers to the question 1-->
    <string name="frameset">Only in framesets</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nul">Null</string>


    <!--Question 2-->
    <string name="hnum_question_2">Question 2</string>
    <string name="question_2h">Which section is used for text and tags that are shown directly on your web page ?</string>

    <!--Answers to the question 2-->
    <string name="answer1h">Head</string>
    <string name="answer2h">Metatags</string>
    <string name="answer3h">Body</string>


    <!--Question 3-->
    <string name="num_question_3h">Question 3</string>
    <string name="question_3h"> Why should you add alternative text to your images ??</string>

    <!--Answers to the question 3-->
    <string name="publh">In case the user wishes to load a different picture.</string>
    <string name="sensitiveh">So the users can get an idea of what the image is before it loads</string>
    <string name="confidentialh">So the user can save the image using the text as a name</string>

    <!--Question 4-->
    <string name="question_4h">  What is used to store information usually relevant to browsers and searchengines?</string>
    <string name="num_question_4h">Question 4</string>

    <!--Answers to the question 4-->
    <string name="managerialh">Cookies</string>
    <string name="physicalh">Metatags</string>
    <string name="logicalh"> Tabs.</string>


    <!--Question 5-->
    <string name="num_question_5h">Question 5</string>
    <string name="question_5h">Why should you specify a background color if you are using an image for the actual background of your page ?</string>

    <!--Answers to the question 5-->
    <string name="answer_5_1h"> The background color will be shown until the image loads</string>
    <string name="answer_5_2h"> In case the image doesnt fit right.</string>
    <string name="answer_5_3h"> So the text shows up better</string>


    <string name="num_question_6h">Question 6</string>
    <string name="question_6h"> What tag tells the browser where the page starts and stops ?</string>

    <!--Answers to the question 6-->
    <string name="passive_attackh">  body </string>
    <string name="active_attackh">Shead</string>
    <string name="close_in_attackh">html</string>


    <!--Question 7-->
    <string name="num_question_7h">Question 7</string>
    <string name="Question_7h"> - One should never combine the "start" and "type" option ?</string>

    <!--Answers to the question 7-->
    <string name="physical_securityh"> True</string>
    <string name="administrative_securityh">False</string>
    <string name="logical_securityh">Sometimes True, sometimes False</string>

    <!--Question 8-->
    <string name="num_question_8h">Question 8</string>
    <string name="question_8h"> Adding a border to your image helps the visitor to recognize it as what ?</string>

    <!--Answers to the question 8-->
    <string name="packet_captureh">A Link</string>
    <string name="password_attackh">A really great picture</string>
    <string name="dumpster_drivingh"> A frame</string>

    <!--Question 9-->
    <string name="num_question_9h">Question 9</string>
    <string name="question_9h"> Which of the following is NOT a valid pair for browser safe colors ?</string>

    <!--Answers to the question 9-->
    <string name="datadiddlingh">CC</string>
    <string name="datavdiddlingh">OO</string>
    <string name="datdiddlinlgh">AA</string>
    <!--Rest of the answers to question 9 to watch in the answer to question 8 above-->


    <!--Question 10-->
    <string name="num_question_10h">Question 10</string>
    <string name="question_10h">Imagelinks can show a text label if you add which property?</string>

    <!--Answers to the question 9-->
    <string name="denial_of_servieh">alternative</string>
    <string name="denial_of_seceh">alt</string>
    <string name="denial_of_srvieh">str</string>

    <!--Rest of the answers to question 10 to watch in the answer to question 8 above-->

    <!--Button "End Test"-->
    <string name="end_testh">End test</string>

    <!--Test Result-->
    <string name="test_result_nameh">"Name: "</string>
    <string name="test_resulth">Test Result</string>
    <string name="test_result_scoreh">"Score: "</string>


    <string name="content_disc">Book name</string>
    <string name="et_hint_book">Enter name of book</string>
    <string name="et_hint_author">Enter name of author</string>
    <string name="button_text_download">Download</string>
    <string name="button_text_search">Search</string>
    <string name="et_hint_query">Enter search query</string>
    <string name="radio_text_bookName">Search by book</string>
    <string name="radio_text_author">Search by author</string>
    <string name="radio_text_vk">VK</string>
    <string name="radio_text_libgen">Libgen</string>
    <string name="et_hint_search">Search for an eBook!</string>


</resources>
